@@ -8,7 +8,7 @@ importFrom(tools, file_ext)
 importFrom(stats, na.omit)
 importFrom(utils, installed.packages, untar, unzip)
 importFrom(urltools, url_parse)
-importFrom(yaml, yaml.load)
+importFrom(yaml, yaml.load, as.yaml)
 importFrom(curl, curl_download, curl_fetch_memory, parse_headers)
 
 # import and export functions from other packages
