@@ -19,7 +19,7 @@ By making import and export easy, it's an obvious next step to also use R as a s
 | ------ | ------ | ------ |
 | Tab-separated data (.tsv) | Yes | Yes |
 | Comma-separated data (.csv) | Yes | Yes |
-| CSVY (CSV + YAML metadata header) (.csvy) | Yes | No |
+| CSVY (CSV + YAML metadata header) (.csvy) | Yes | Yes |
 | Pipe-separated data (.psv) | Yes | Yes |
 | Fixed-width format data (.fwf) | Yes | Yes |
 | Serialized R objects (.rds) | Yes | Yes |
